// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions addConvo should create ADD_CONVO action 1`] = `
Object {
  "name": "chat",
  "type": "server.ADD_CONVO",
}
`;

exports[`actions addMessage should create ADD_MESSAGE action 1`] = `
Object {
  "convo": "react",
  "rawMarkup": "<p>Use Redux</p>",
  "text": "Use Redux",
  "type": "server.ADD_MESSAGE",
  "userId": "1231231",
}
`;

exports[`actions fetchConvos should create [CALL_API] action 1`] = `
Object {
  Symbol(Call API): Object {
    "endpoint": "null/api/convos",
    "method": "GET",
    "types": Array [
      "CONVOS_REQUEST",
      Object {
        "payload": [Function],
        "type": "CONVOS_SUCCESS",
      },
      "CONVOS_FAILURE",
    ],
  },
}
`;

exports[`actions fetchMessages should create [CALL_API] action 1`] = `
Object {
  Symbol(Call API): Object {
    "endpoint": "null/api/messages/chat",
    "method": "GET",
    "types": Array [
      "MESSAGES_REQUEST",
      Object {
        "payload": [Function],
        "type": "MESSAGES_SUCCESS",
      },
      "MESSAGES_FAILURE",
    ],
  },
}
`;

exports[`actions signIn should create [CALL_API] action 1`] = `
Object {
  Symbol(Call API): Object {
    "body": "{\\"username\\":{\\"username\\":\\"Dan\\"}}",
    "endpoint": "null/api/signIn",
    "headers": Object {
      "Content-Type": "application/json",
    },
    "method": "POST",
    "types": Array [
      "SIGN_IN_REQUEST",
      Object {
        "payload": [Function],
        "type": "SIGN_IN_SUCCESS",
      },
      "SIGN_IN_FAILURE",
    ],
  },
}
`;
